[gd_scene load_steps=11 format=3 uid="uid://d0i5m26pos1e2"]

[ext_resource type="Texture2D" uid="uid://244ghu6jybin" path="res://water0.png" id="1_hlcw6"]
[ext_resource type="Script" path="res://water_sprinkler.gd" id="1_l4hmx"]
[ext_resource type="Texture2D" uid="uid://cv8gox08rmpsu" path="res://water3.png" id="2_6ryjh"]
[ext_resource type="Texture2D" uid="uid://b458e3aatunoa" path="res://water5.png" id="3_ca2xk"]
[ext_resource type="Texture2D" uid="uid://8j6p5xvd2dkf" path="res://water4.png" id="3_tkmie"]
[ext_resource type="Texture2D" uid="uid://dw33k8tup2m11" path="res://water1.png" id="4_5y0he"]
[ext_resource type="Texture2D" uid="uid://bu55ar0swy13k" path="res://water2.png" id="5_3hv4c"]
[ext_resource type="Texture2D" uid="uid://dc31o778n7kpf" path="res://nut.png" id="8_76fgb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ps2pc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hlcw6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca2xk")
}],
"loop": true,
"name": &"fixed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6ryjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_tkmie")
}],
"loop": true,
"name": &"heavy_sprinkle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hlcw6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5y0he")
}, {
"duration": 1.0,
"texture": ExtResource("5_3hv4c")
}, {
"duration": 1.0,
"texture": ExtResource("4_5y0he")
}],
"loop": true,
"name": &"light_sprinkle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m3g6o"]
radius = 17.2627

[node name="WaterSprinkler" type="Area2D"]
position = Vector2(1, 21)
scale = Vector2(3, 3)
script = ExtResource("1_l4hmx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ps2pc")
animation = &"fixed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 75)
shape = SubResource("CircleShape2D_m3g6o")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="nut" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5.96046e-08, 73.6667)
scale = Vector2(0.35, 0.294)
texture = ExtResource("8_76fgb")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
